--- a/xrf_explorer/client/index.html
+++ b/xrf_explorer/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="dark" lang="en">
+<html class="dark" style="font-size: 16px" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
