--- a/xrf_explorer/client/index.html
+++ b/xrf_explorer/client/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html class="dark" style="font-size: 16px" lang="en">
+<html class="dark overflow-hidden" style="font-size: 16px" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XRF-Explorer</title>
   </head>
