Made logging levels more consistent in client and removed the firefox FOUC warning

--- a/xrf_explorer/client/index.html
+++ b/xrf_explorer/client/index.html
@@ -6,6 +6,9 @@
     <title>XRF-Explorer</title>
   </head>
   <body>
+    <script>
+      const FF_FOUC_FIX = null; // Prevents FOUC warning in Firefox
+    </script>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
