--- a/xrf_explorer/client/index.html
+++ b/xrf_explorer/client/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/xrf.svg" />
     <title>XRF-Explorer</title>
+    <style>
+      body {
+        background-color: hsl(0 0% 100%);
+      }
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: hsl(20 14.3% 4.1%);
+        }
+      }
+    </style>
   </head>
   <body>
     <script>
